Refactor Fuente dinámica
Limpiamos y cambiamos lógica en la fuente dinámica

Co-Authored-By: Fausto <faustoandresrodriguez@gmail.com>
Co-Authored-By: JuanPabloMontemarani <165086575+juanpablomontemarani@users.noreply.github.com>
Co-Authored-By: Manuel Rafael <manu44rafa44@gmail.com>
Co-Authored-By: JuanFFernan05 <167038253+juanffernan05@users.noreply.github.com>